crates/memscribe-testkit/tests/snapshots/nodes__codex__v2__rejected_alternative.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "01JZ8codexsess0002rejected",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "We considered GraphQL for the public API, but let's reject that and stick with REST. GraphQL adds caching and schema-evolution overhead we don't want right now.",
    "markers": [
      {
        "rule_id": "decision_verb.select_prep",
        "category": "decision_verb",
        "matched_text": "stick with",
        "offset": 68
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/codex/v2/rejected_alternative.jsonl",
        "byte_offset": 270,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "We considered GraphQL for the public API, but let's reject that and stick with REST.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  }
]
