crates/memscribe-testkit/tests/snapshots/nodes__codex__v2__rewind_compaction.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "01JZ8codexsess0007rewindcompact",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use MongoDB for the document store. Set up the driver and the connection config.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/codex/v2/rewind_compaction.jsonl",
        "byte_offset": 283,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use MongoDB for the document store.",
    "considered_options": [
      {
        "text": "MongoDB",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "conversation",
    "session_id": "01JZ8codexsess0007rewindcompact",
    "turn_range": {
      "start": 5,
      "end": 6
    },
    "text": "Actually let's use Postgres with JSONB for the document store instead. Switch to Postgres and drop the MongoDB plan.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 15
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "let's use",
        "offset": 9
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/codex/v2/rewind_compaction.jsonl",
        "byte_offset": 1320,
        "line_no": 6
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Actually let's use Postgres with JSONB for the document store instead.",
    "considered_options": [
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 5,
      "end": 6
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/store.rs",
    "diff": {
      "path": "src/store.rs",
      "old": null,
      "new": null,
      "unified": "@@\n-use mongodb::Client;\n+use sqlx::PgPool;\n@@\n-    let client = Client::with_uri_str(\"mongodb://localhost:27017\").await?;\n+    let pool = PgPool::connect(\"postgres://localhost:5432/acme\").await?;",
      "added_lines": 2,
      "removed_lines": 2
    },
    "git": {
      "sha": "0718293a4b5c6d7e8f9001020304050607080910",
      "branch": "feat/persistence-pivot"
    },
    "episode_id": "4c207b03d5513ed806e41371a1f400264f7f4c230c4a90649a43dd379f6b8f35"
  },
  {
    "node": "binding",
    "from": "decision:01JZ8codexsess0007rewindcompact:5",
    "to": "episode:4c207b03d5513ed806e41371a1f400264f7f4c230c4a90649a43dd379f6b8f35",
    "relation": "produced",
    "prov": {
      "used_session": "01JZ8codexsess0007rewindcompact",
      "used_decision": "decision:01JZ8codexsess0007rewindcompact:5",
      "was_generated_by_session": "01JZ8codexsess0007rewindcompact",
      "t_use": "2026-06-22T20:00:40.2Z",
      "t_gen": "2026-06-22T20:00:53.4Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
